@@ -50,6 +50,7 @@ since 1999.  If I missed your name, let me know.
 * Don Carroll
 * Ian Cass
 * Alexios Chouhoulas
+* Jonathan Clarke
 * Justin Clarke
 * Perry Clarke
 * Nick Cleaton
